syntax = "proto3";

option go_package = "github.com/atticplaygroup/pkv/proto/kvstore";

import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/duration.proto";

package kvstore.pkv.proto;

service KvStore {
  rpc CreateValue(CreateValueRequest) returns (CreateValueResponse) {
    option (google.api.http) = {
      post: "/v1/{parent=accounts/*}/values:create"
      body: "value"
    };
  }

  rpc CreateStreamValue(CreateStreamValueRequest) returns (CreateStreamValueResponse) {
    option (google.api.http) = {
      post: "/v1/{parent=accounts/*/streams/*}/values:create"
      body: "value"
    };
  }

  rpc GetValue(GetValueRequest) returns (GetValueResponse) {
    option (google.api.http) = {
      get: "/v1/{name=accounts/*/values/*}"
    };
  }

  rpc GetStreamValue(GetStreamValueRequest) returns (GetStreamValueResponse) {
    option (google.api.http) = {
      get: "/v1/{name=accounts/*/streams/*/values/*}"
    };
  }

  rpc ListStreamValues(ListStreamValuesRequest) returns (ListStreamValuesResponse) {
    option (google.api.http) = {
      get: "/v1/{parent=accounts/*/streams/*}/values"
    };
  }

  rpc ProlongValue(ProlongValueRequest) returns (ProlongValueResponse) {
    option (google.api.http) = {
      post: "/v1/{name=accounts/*/values/*}:prolong"
      body: "*"
    };
  }
}

message CreateValueRequest {
  string parent = 1;
  bytes value = 2 [(google.api.field_behavior) = REQUIRED];
  google.protobuf.Duration ttl = 3;
}

message CreateValueResponse {
  string name = 1;
  google.protobuf.Duration ttl = 2;
}

message CreateStreamValueRequest {
  string parent = 1;
  bytes value = 2 [(google.api.field_behavior) = REQUIRED];
  // google.protobuf.Duration ttl = 2; // The TTL is defined per stream
}

message CreateStreamValueResponse {
  string name = 1;
  google.protobuf.Duration ttl = 2;
}

message GetStreamValueRequest {
  string name = 1;
}

message StreamValueInfo {
  bytes value = 1;
  string stream_entry_id = 2;
}

message GetStreamValueResponse {
  StreamValueInfo stream_value_info = 1;
}

message ListStreamValuesRequest {
  string parent = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListStreamValuesResponse {
  repeated StreamValueInfo stream_value_info = 1;
  string page_token = 2;
}

message GetValueRequest {
  string name = 1 [(google.api.field_behavior) = IDENTIFIER];
}

message GetValueResponse {
  bytes value = 1;
}

message ProlongValueRequest {
  string name = 1 [(google.api.field_behavior) = IDENTIFIER];
  google.protobuf.Duration ttl = 2;
  int64 max_size = 3;
}

message ProlongValueResponse {
  string name = 1;
  google.protobuf.Duration ttl = 2;
}
